# tmf-mock

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
canvas/: 00-namespace.yaml  10-deployment.yaml  11-service.yaml  20-component.yaml  README.md  verify.cmd
docs/: conformance.md
tests/: conftest.py  test_statemachine.py  test_tmf638.py  test_tmf639.py  test_tmf641.py
tmf_mock/: __init__.py  _app.py  cli.py  seed.py  server.py  statemachine.py  store.py
tmf_mock/models/: __init__.py  common.py  tmf638.py  tmf639.py  tmf641.py
tmf_mock/routers/: __init__.py  tmf638.py  tmf639.py  tmf641.py
