[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmf-mock"
version = "0.1.1"
description = "Smart TMForum Open API mock server with domain-aware seed data, cross-API referential integrity, and lifecycle state machine enforcement"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Manoj Chavan", email = "manoj.chavan23@gmail.com" }]
keywords = ["tmforum", "telecom", "bss", "oss", "mock", "openapi", "tmf638", "tmf639", "tmf641"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "click>=8.1.0",
    "pydantic>=2.7.0",
    "faker>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.scripts]
tmf-mock = "tmf_mock.cli:main"

[project.urls]
Homepage = "https://github.com/manojchavan23/tmf-mock"
Repository = "https://github.com/manojchavan23/tmf-mock"
Issues = "https://github.com/manojchavan23/tmf-mock/issues"

[tool.hatch.build.targets.wheel]
packages = ["tmf_mock"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
